--- a/environment.yml
+++ b/environment.yml
@@ -1,1 +1,16 @@
-
+name: shape-morph-diffusion
+channels:
+  - conda-forge
+  - defaults
+dependencies:
+  - python=3.10
+  - pip
+  - numpy
+  - pillow
+  - scikit-image
+  - pip:
+      - torch>=2.0
+      - torchvision>=0.15
+      - diffusers>=0.27.0
+      - accelerate>=0.31.0
+      - tqdm
